--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,8 @@
     </properties>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/liatrio/spring-petclinic/</developerConnection>
+        <!--developerConnection>scm:git:https://github.com/liatrio/spring-petclinic/</developerConnection-->
+        <developerConnection>scm:git:https://github.com/ihocho/spring-petclinic-pipeline/</developerConnection>
         <tag>spring-petclinic-1.0.0</tag>
     </scm>
 
